# phosphodisco

./: .gitignore  README.md  README_pypi.md  env.yml  phosphodisco_design_doc.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  phosphodisco.doctree  phosphodisco.tests.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  phosphodisco.html  phosphodisco.tests.html  py-modindex.html  search.html  searchindex.js
phdisc_test/: classes.py
phosphodisco/: __init__.py  annotation_association.py  catheat.py  classes.py  cli.py  cluster.json  constants.py  datasets.py  demo_datasets.py  gene_ontology_analysis.py  hypercluster.smk  motif_analysis.py  nominate_regulators.py  parsers.py  phdc.smk  utils.py  visualize.py
phosphodisco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phosphodisco/data/: config-custom.yml  config-custom_template0.yml  config-custom_template1.yml  config-custom_template2.yml  kin_act_loops.csv  kinases_and_phosphatases.txt  protein_phosphatase_fromGeneNames_list.txt
phosphodisco/data/demo/: BRCA_v5.2__mock_annotations.csv  BRCA_v5.2__module_site_df.csv  BRCA_v5.2__selected_annotations.csv  BRCA_v5.2__selected_modules.csv  (+2 more)
phosphodisco/tests/: test_aa_overlap.py  test_classes.py
src/: __init__.py  classes.py  clustering.py  normalize.py  parsers.py
src/phosreg/: analyze_clusters.py  annotation_association.py  classes.py  nominate_regulators.py  parsers.py  visualize.py
tutorial/: phosphodisco_tutorial.ipynb
(+12 files in other folders)
