[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phosphodisco"
version = "0.0.1c"
authors = [
  { name="Tobias Schraink", email="tschraink@gmail.com" },
]
description = "A package for the discovery of co-regulated phosphorylation modules"
readme = "README_pypi.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
   "pandas >= 0.24.2",
   "numpy >= 1.16.4",
   "scipy >= 1.2.1",
   "matplotlib >= 3.1.0",
   "seaborn >= 0.9.0",
   "scikit-learn >= 0.22.0",
   "statsmodels >= 0.11.0",
   "hypercluster >= 0.1.13",
   "oyaml >= 1.0",
   "logomaker >= 0.8",
   "snakemake >= 7.8.5",
   "hdbscan >= 0.8.28",
   "cython >= 0.29.30" 
]

[project.urls]
"Homepage" = "https://github.com/ruggleslab/phosphodisco"
"Bug Tracker" = "https://github.com/ruggleslab/phosphodisco/issues"

[project.scripts]
phdc_run = "phosphodisco.cli:run"
phdc_generate_config = "phosphodisco.cli:generate_config"

[tool.setuptools]
packages = ["phosphodisco", "phosphodisco.data", "phosphodisco.tests"]
